examples/test/testpolicy19734.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19734
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key12: value27
      key31: value10
      key43: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value15
          key29: value42
      podSelector:
        matchLabels:
          key24: value13
          key33: value33
